--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "heroku": "^7.22.7"
+    "express": "^4.16.4"
   }
 }
