--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "fetch": "^1.1.0",
+    "https-proxy-agent": "^2.2.1",
     "node-fetch": "^2.3.0"
   }
 }
