--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "fetch": "^1.1.0",
     "https-proxy-agent": "^2.2.4",
     "node-fetch": "^2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
