--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.16.4",
     "fetch": "^1.1.0",
     "https-proxy-agent": "^2.2.4",
-    "node-fetch": "^2.3.0"
+    "multer": "^1.4.2",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
