--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-validator": "^6.10.0",
     "fetch": "^1.1.0",
     "https-proxy-agent": "^2.2.4",
     "multer": "^1.4.2",
