--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "fetch": "^1.1.0",
     "https-proxy-agent": "^2.2.4",
     "multer": "^1.4.2",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "ua-parser-js": "^0.7.24"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
